# API-Scoring-App

./: .gitignore  Makefile  README.md  cli.py  example.txt  main.py  pyproject.toml  report.json
core/: scoring_engine.py
reports/: export.py
scoring/: rules.py  rules_base.py  schema_type_rule.py
src/: cli.py  main.py
src/core/: scoring_engine.py
src/reports/: export.py
src/scoring/: descriptions_documentation_rule.py  examples_samples_rule.py  get_rules.py  miscellaneous_rule.py  paths_operation_rule.py  response_code_rule.py  rules_base.py  schema_type_rule.py  security_rule.py
src/utils/: loader.py
tests/: test_cli_score.py
tests/test_files/: file_0_20.json  file_20_35.yaml  file_35_50.json  file_50_60.yaml  file_70_80.json  file_95_100.yaml  file_98_100.yaml  small.json  small.yaml
tests/unit_tests/: test_descriptions_documentation_rule.py  test_examples_samples_rule.py  test_miscellaneous_rule.py  test_paths_operation_rule.py  test_response_code_rule.py  test_schema_type_rule.py  test_security_rule.py
utils/: loader.py
