[project]
name = "api-scoring-app"
version = "0.1.0"
description = "dependencies for python enviroment."
authors = [
    {name = "Mateus929",email = "zhorzholianimate@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12, <4.0"
dependencies = [
    "click (>=8.2.0,<9.0.0)",
    "markdown2 (>=2.5.3,<3.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "pyyaml (>=6.0.2,<7.0.0)",
    "openapi-spec-validator (>=0.7.1,<0.8.0)",
    "pytest (>=8.3.5,<9.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ruff = "^0.11.10"
mypy = "^1.15.0"
types-pyyaml = "^6.0.12.20250516"
types-requests = "^2.32.0.20250515"